<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Searcher</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Google Images</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_image_display">Full Size View</string>
    <string name="title_activity_settings">Settings</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string name="image_size">Image Size:</string>
    <string name="color_filter">Color Filter:</string>
    <string name="image_type">Image Type:</string>
    <string name="site_filter">Site Filter</string>
    <string name="site_hint">yahoo.com</string>
    <string name="save_btn">Save</string>
</resources>
